
2017-01-02 Brian Tiffin <btiffin@gnu.org>

	* cobc.h: test cb_warn_unfinished in CB_UNFINISHED message macro.

2016-12-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: changes for -verbose, optional argument for verbose level,
	  -vv output shows information from the compiler, -vvv from linker,
	  -v -help shows help from compiler/linker,
	  -### shows external commands but doesn't execute them
	* cobc.c (cobc_sig_handler): only ask for bug report if the signal isn't
	  a user-requested one
	* codegen.c (codegen): reset pic_cache pointer
	* cobc.c (xref_print): corrected size of numbuf

2016-12-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: disabled nested ODO as the current implementation
	  has too many flaws (see re-opened FR #99)

2016-12-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (main): bugs #346 moved compiler specific COB_CFLAGS from
	  to configure to provide transparency and full control to the user

2016-12-22  Edward Hart <edward.dan.hart@gmail.com>

	* scanner.l, pplex.l: suppress unused function warning in clang.

2016-12-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c: use global current_program instead of local current_prog
	* cobc.c (cobc_abort_msg): part of fixing bug #344
	  distinguish between compilation and final code generation
	* cobc.c: added message for internal compiler errors to report them
	* codegen.c (output_param): part of fixing bug #344
	  check for field reference to prevent SIGSEGV
	* typeck.c (cb_emit_move): fixing bug #344 check that MOVE target is
	  no label or program prototypes
	* tree.c (cb_name): only use as much parsing memory for names as necessary

2016-12-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: stricter syntax checking for WRITE|REWRITE FILE

2016-12-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l: limit for ACUCOBOL literals: UINT_MAX